--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<li><a href="#work">EXPERIENCIA LABORAL</a></li>
 					<li><a href="#portfolio">HOBBIES</a></li>
 					<li><a href="#contact">CONTACTO</a></li>
-					<li><a href="#contact">BITACORA DEL PROYECTO</a></li>
+					<li><a href="#project">BITACORA DEL PROYECTO</a></li>
 				</ul>
 			</nav>
 
