--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					<li><a href="#top">SOBRE MÍ</a></li>
 					<li><a href="#work">EXPERIENCIA LABORAL</a></li>
 					<li><a href="#portfolio">HOBBIES</a></li>
-					<li><a href="#contact">CONTACTO</a></li>
 					<li><a href="#project">BITACORA DEL PROYECTO</a></li>
+					<li><a href="#contact">CONTACTO</a></li>
 				</ul>
 			</nav>
 
@@ -165,6 +165,38 @@
 					</footer>
 				</div>
 			</article>
+
+		<!-- Project -->
+			<article id="work" class="wrapper style2">
+				<div class="container">
+					<header>
+						<h2>Mi experiencia laboral</h2>
+						<p>Durante mi trayectoria, he desarrollado habilidades clave en ventas y atención al cliente, fundamentales para mi crecimiento profesional y el cumplimiento de objetivos. Destacan dos roles:</p>
+					</header>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<img src="./ELX.jpeg" alt="Imagen de Electroluz Oechsle" class="image featured">
+								<h3>Electroluz Oechsle: Promotora de Ventas</h3>
+								<p>Como promotora de ventas en Electroluz Ochle, realicé demostraciones de productos, abordé al público en puntos de venta, gestioné el inventario y participé en el diseño de estrategias de marketing y publicidad.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<img src="./TF (2).png" alt="Imagen de home center" class="image featured">
+								<h3>Sodimac Homecenter: Asesora de Ventas</h3>
+								<p>En Sodimac Homecenter, me desempeñé como asesora de ventas, enfocada en el menaje y muebles. Mantuve y aumenté las ventas, proporcioné asesoramiento a los clientes, y preparé material de marketing para promover productos y eventos especiales.</p>
+							</section>
+						</div>
+							</section>
+						</div>
+					</div>
+					<footer>
+						<p>"Más allá de mi vida profesional, hay un mundo de intereses que me apasionan. A continuación, te invito a conocer un poco más sobre mis pasatiempos y hobbies."</p>
+						<a href="#portfolio" class="button large scrolly">Veremos un poco sobre mis hobbies</a>
+					</footer>
+				</div>
+			</article>				
 
 		<!-- Contact -->
 			<article id="contact" class="wrapper style4">
