--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 			</article>
 
 		<!-- Project -->
-			<article id="work" class="wrapper style2">
+			<article id="project" class="wrapper style2">
 				<div class="container">
 					<header>
 						<h2>Mi experiencia laboral</h2>
