--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 			<article id="project" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>Mi experiencia laboral</h2>
-						<p>Durante mi trayectoria, he desarrollado habilidades clave en ventas y atención al cliente, fundamentales para mi crecimiento profesional y el cumplimiento de objetivos. Destacan dos roles:</p>
+						<h2>Dinámicas en clases</h2>
+						<p>Durante el promedio 2, realizamos distintas actividades en clases con el objetivo de implementar y presentar nuestro proyecto final del curso de Laboratorio de Innovación 2:</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
