--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<img src="./ELX.jpeg" alt="Imagen de Electroluz Oechsle" class="image featured">
-								<h3>Electroluz Oechsle: Promotora de Ventas</h3>
-								<p>Como promotora de ventas en Electroluz Ochle, realicé demostraciones de productos, abordé al público en puntos de venta, gestioné el inventario y participé en el diseño de estrategias de marketing y publicidad.</p>
+								<img src="./Resistencia.jpg" alt="Imagen de Resistencia" class="image featured">
+								<h3>Dinámica 1: Resistencias</h3>
+								<p>Descripción: Una resistencia es un componente eléctrico que limita la cantidad de corriente que puede fluir a través de un circuito. Es crucial en muchos circuitos electrónicos para proteger componentes sensibles.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
