--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<img src="./TF (2).png" alt="Imagen de home center" class="image featured">
-								<h3>Sodimac Homecenter: Asesora de Ventas</h3>
-								<p>En Sodimac Homecenter, me desempeñé como asesora de ventas, enfocada en el menaje y muebles. Mantuve y aumenté las ventas, proporcioné asesoramiento a los clientes, y preparé material de marketing para promover productos y eventos especiales.</p>
+								<img src="./Ultrasonido.png" alt="Imagen de Ultrasonido" class="image featured">
+								<h3>Dinámica 2: Ultrasonido con el botón</h3>
+								<p>Descripción: Este proyecto utiliza un sensor de ultrasonido para medir la distancia y un botón para activar el sensor. El resultado se mostrará en el monitor serie del Arduino.</p>
 							</section>
 						</div>
 							</section>
