--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<img src="./Ultrasonido.png" alt="Imagen de Ultrasonido" class="image featured">
+								<img src="./Ultrasonido.jpg" alt="Imagen de Ultrasonido" class="image featured">
 								<h3>Dinámica 2: Ultrasonido con el botón</h3>
 								<p>Descripción: Este proyecto utiliza un sensor de ultrasonido para medir la distancia y un botón para activar el sensor. El resultado se mostrará en el monitor serie del Arduino.</p>
 							</section>
