--- a/index.html
+++ b/index.html
@@ -176,16 +176,30 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<img src="./Resistencia.jpg" alt="Imagen de Resistencia" class="image featured">
+								<img src="./Resistencia1.jpg" alt="Imagen de Resistencia" class="image featured">
 								<h3>Dinámica 1: Resistencias</h3>
 								<p>Descripción: Una resistencia es un componente eléctrico que limita la cantidad de corriente que puede fluir a través de un circuito. Es crucial en muchos circuitos electrónicos para proteger componentes sensibles.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<img src="./Ultrasonido.jpg" alt="Imagen de Ultrasonido" class="image featured">
+								<img src="./Ultrasonido1.jpg" alt="Imagen de Ultrasonido" class="image featured">
 								<h3>Dinámica 2: Ultrasonido con el botón</h3>
 								<p>Descripción: Este proyecto utiliza un sensor de ultrasonido para medir la distancia y un botón para activar el sensor. El resultado se mostrará en el monitor serie del Arduino.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<img src="./Semaforo1.jpg" alt="Imagen de Semaforo" class="image featured">
+								<h3>Dinámica 3: Semáforo en Tinkercad</h3>
+								<p>Descripción: Este proyecto simula un semáforo usando LEDs. Los LEDs se encenderán en secuencia para simular las luces de un semáforo: rojo, amarillo y verde.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<img src="./Servomotor1.jpg" alt="Imagen de Servomotor" class="image featured">
+								<h3>Dinámica 4: Sensor de Ultrasonido con Servomotor</h3>
+								<p>Descripción: Este proyecto utiliza un sensor de ultrasonido para detectar objetos y mover un servomotor para abrir una puerta cuando la distancia medida es menor a un umbral determinado.</p>
 							</section>
 						</div>
 							</section>
