--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
 								<img src="./Resistencia1.jpg" alt="Imagen de Resistencia" class="image featured">
 								<h3>Dinámica 1: Resistencias</h3>
 								<p>Descripción: Una resistencia es un componente eléctrico que limita la cantidad de corriente que puede fluir a través de un circuito. Es crucial en muchos circuitos electrónicos para proteger componentes sensibles.</p>
+								<p> </p>
+								<p>Materiales</p>
+								<p>- Arduino Uno</p>
+								<p>- Protoboard</p>
 							</section>
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
