--- a/index.html
+++ b/index.html
@@ -180,9 +180,7 @@
 								<h3>Dinámica 1: Resistencias</h3>
 								<p>Descripción: Una resistencia es un componente eléctrico que limita la cantidad de corriente que puede fluir a través de un circuito. Es crucial en muchos circuitos electrónicos para proteger componentes sensibles.</p>
 								<p> </p>
-								<p>Materiales</p>
-								<p>- Arduino Uno</p>
-								<p>- Protoboard</p>
+								<p>Materiales: Arduino Uno, Protoboard, Resistencia (220Ω), LED, Cables de conexión</p>
 							</section>
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
