--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
 							<section class="box style1">
 								<img src="./Resistencia1.jpg" alt="Imagen de Resistencia" class="image featured">
 								<h3>Dinámica 1: Resistencias</h3>
-								<p>Descripción: Una resistencia es un componente eléctrico que limita la cantidad de corriente que puede fluir a través de un circuito. Es crucial en muchos circuitos electrónicos para proteger componentes sensibles.</p>
+								<p> </p>
+								<p><h2>Descripción: </h2>Una resistencia es un componente eléctrico que limita la cantidad de corriente que puede fluir a través de un circuito. Es crucial en muchos circuitos electrónicos para proteger componentes sensibles.</p>
 								<p> </p>
 								<p>Materiales: Arduino Uno, Protoboard, Resistencia (220Ω), LED, Cables de conexión</p>
 							</section>
