--- a/index.html
+++ b/index.html
@@ -182,7 +182,12 @@
 								<h4>Descripción:</h4>
 								<p>Una resistencia es un componente eléctrico que limita la cantidad de corriente que puede fluir a través de un circuito. Es crucial en muchos circuitos electrónicos para proteger componentes sensibles.</p>
 								<p> </p>
-								<p>Materiales: Arduino Uno, Protoboard, Resistencia (220Ω), LED, Cables de conexión</p>
+								<h4>Materiales:</h4>
+								<p>Arduino Uno, Protoboard, Resistencia (220Ω), LED, Cables de conexión</p>
+								<p> </p>
+								<h4>Pasos:</h4>
+								<p>1. Conexión de la Resistencia y el LED: Conecta la pata larga del LED (ánodo) al pin digital 13 del Arduino a través de una resistencia de 220Ω. Luego conecta la pata corta del LED (cátodo) a GND (tierra) del Arduino.</p>
+								<p>2. Código Arduino IDE:</p>
 							</section>
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
