--- a/index.html
+++ b/index.html
@@ -186,8 +186,10 @@
 								<p>Arduino Uno, Protoboard, Resistencia (220Ω), LED, Cables de conexión</p>
 								<p> </p>
 								<h4>Pasos:</h4>
-								<p>1. Conexión de la Resistencia y el LED: Conecta la pata larga del LED (ánodo) al pin digital 13 del Arduino a través de una resistencia de 220Ω. Luego conecta la pata corta del LED (cátodo) a GND (tierra) del Arduino.</p>
+								<p>1. Conexión de la Resistencia y el LED: conecta la pata larga del LED (ánodo) al pin digital 13 del Arduino a través de una resistencia de 220Ω. Luego, conecta la pata corta del LED (cátodo) a GND (tierra) del Arduino.</p>
 								<p>2. Código Arduino IDE:</p>
+								<img src="./codigoide.jpg" alt="Imagen de Codigo IDE" class="image featured">
+								<p>Sube el código al Arduino:conecta el Arduino a tu computadora. Luego, abre el Arduino IDE, pega el código anterior y súbelo al Arduino.</p>
 							</section>
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
