--- a/index.html
+++ b/index.html
@@ -196,7 +196,19 @@
 							<section class="box style1">
 								<img src="./Ultrasonido1.jpg" alt="Imagen de Ultrasonido" class="image featured">
 								<h3>Dinámica 2: Ultrasonido con el botón</h3>
-								<p>Descripción: Este proyecto utiliza un sensor de ultrasonido para medir la distancia y un botón para activar el sensor. El resultado se mostrará en el monitor serie del Arduino.</p>
+								<p> </p>
+								<h4>Descripción:</h4>
+								<p>Este proyecto utiliza un sensor de ultrasonido para medir la distancia y un botón para activar el sensor. El resultado se mostrará en el monitor serie del Arduino.</p>
+								<p> </p>
+								<h4>Materiales:</h4>
+								<p>Arduino Uno, Sensor de Ultrasonido HC-SR04, Botón, Protoboard, Cables de conexión, Resistencia (10kΩ para el botón)</p>
+								<p> </p>
+								<h4>Pasos:</h4>
+								<p>1. Conexión del Sensor de Ultrasonido: VCC del sensor al pin 5V del Arduino, GND del sensor a GND del Arduino, Trig del sensor al pin digital 9 del Arduino, Echo del sensor al pin digital 10 del Arduino.  </p>
+								<p>2. Conexión del Botón: un pin del botón al pin digital 2 del Arduino, el otro pin del botón a GND y luego colocar una resistencia de 10kΩ entre el pin del botón que está conectado al pin 2 del Arduino y el 5V.</p>
+								<p>3. Código Arduino IDE:</p>
+								<img src="./codigoide2.jpg" alt="Imagen de Codigo IDE2" class="image featured">
+								<p>4. Sube el código al Arduino:conecta el Arduino a tu computadora. Abre el Arduino IDE, pega el código anterior y súbelo al Arduino. Luego, abre el monitor serie para ver la distancia medida cuando presionas el botón.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
