--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
 								<p>1. Conexión de la Resistencia y el LED: conecta la pata larga del LED (ánodo) al pin digital 13 del Arduino a través de una resistencia de 220Ω. Luego, conecta la pata corta del LED (cátodo) a GND (tierra) del Arduino.</p>
 								<p>2. Código Arduino IDE:</p>
 								<img src="./codigoide.jpg" alt="Imagen de Codigo IDE" class="image featured">
-								<p>3. Sube el código al Arduino:conecta el Arduino a tu computadora. Luego, abre el Arduino IDE, pega el código anterior y súbelo al Arduino.</p>
+								<p>3. Sube el código al Arduino: conecta el Arduino a tu computadora. Luego, abre el Arduino IDE, pega el código anterior y súbelo al Arduino.</p>
+								<p> </p>
 							</section>
 						</div>
 						<div class="col-6 col-6-medium col-12-small">
@@ -204,25 +205,49 @@
 								<p>Arduino Uno, Sensor de Ultrasonido HC-SR04, Botón, Protoboard, Cables de conexión, Resistencia (10kΩ para el botón)</p>
 								<p> </p>
 								<h4>Pasos:</h4>
-								<p>1. Conexión del Sensor de Ultrasonido: VCC del sensor al pin 5V del Arduino, GND del sensor a GND del Arduino, Trig del sensor al pin digital 9 del Arduino, Echo del sensor al pin digital 10 del Arduino.  </p>
+								<p>1. Conexión del Sensor de Ultrasonido: VCC del sensor al pin 5V del Arduino, GND del sensor a GND del Arduino, Trig del sensor al pin digital 9 del Arduino, Echo del sensor al pin digital 10 del Arduino.</p>
 								<p>2. Conexión del Botón: un pin del botón al pin digital 2 del Arduino, el otro pin del botón a GND y luego colocar una resistencia de 10kΩ entre el pin del botón que está conectado al pin 2 del Arduino y el 5V.</p>
 								<p>3. Código Arduino IDE:</p>
 								<img src="./codigoide2.jpg" alt="Imagen de Codigo IDE2" class="image featured">
-								<p>4. Sube el código al Arduino:conecta el Arduino a tu computadora. Abre el Arduino IDE, pega el código anterior y súbelo al Arduino. Luego, abre el monitor serie para ver la distancia medida cuando presionas el botón.</p>
+								<p>4. Sube el código al Arduino: conecta el Arduino a tu computadora. Abre el Arduino IDE, pega el código anterior y súbelo al Arduino. Luego, abre el monitor serie para ver la distancia medida cuando presionas el botón.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<img src="./Semaforo1.jpg" alt="Imagen de Semaforo" class="image featured">
 								<h3>Dinámica 3: Semáforo en Tinkercad</h3>
-								<p>Descripción: Este proyecto simula un semáforo usando LEDs. Los LEDs se encenderán en secuencia para simular las luces de un semáforo: rojo, amarillo y verde.</p>
+								<p> </p>
+								<h4>Descripción:</h4>
+								<p>Este proyecto simula un semáforo usando LEDs. Los LEDs se encenderán en secuencia para simular las luces de un semáforo: rojo, amarillo y verde.</p>
+								<p> </p>
+								<h4>Materiales:</h4>
+								<p>Arduino Uno, LEDs (rojo, amarillo y verde), Resistencia (220Ω), Protoboard, Cables de conexión</p>
+								<p> </p>
+								<h4>Pasos:</h4>
+								<p>1. Conexión de los LEDs: conecta la pata larga de cada LED a los pines digitales del Arduino: rojo al pin 13, amarillo al pin 12, y verde al pin 11. Luego, conecta la pata corta de cada LED a GND a través de una resistencia de 220Ω.</p>
+								<p>2. Código Arduino IDE:</p>
+								<img src="./codigoide3.jpg" alt="Imagen de Codigo IDE3" class="image featured">
+								<p>3. Sube el código al Arduino: conecta el Arduino a tu computadora. Luego, abre el Arduino IDE, pega el código anterior y súbelo al Arduino.</p>
+								<p> </p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<img src="./Servomotor1.jpg" alt="Imagen de Servomotor" class="image featured">
 								<h3>Dinámica 4: Sensor de Ultrasonido con Servomotor</h3>
-								<p>Descripción: Este proyecto utiliza un sensor de ultrasonido para detectar objetos y mover un servomotor para abrir una puerta cuando la distancia medida es menor a un umbral determinado.</p>
+								<p> </p>
+								<h4>Descripción:</h4>
+								<p>Este proyecto utiliza un sensor de ultrasonido para detectar objetos y mover un servomotor para abrir una puerta cuando la distancia medida es menor a un umbral determinado.</p>
+								<p> </p>
+								<h4>Materiales:</h4>
+								<p>Arduino Uno, Sensor de Ultrasonido HC-SR04, Servomotor, Protoboard, Cables de conexión.</p>
+								<p> </p>
+								<h4>Pasos:</h4>
+								<p>1. Conexión del Sensor de Ultrasonido: VCC del sensor al pin 5V del Arduino, GND del sensor a GND del Arduino, Trig del sensor al pin digital 9 del Arduino, Echo del sensor al pin digital 10 del Arduino.</p>
+								<p>2. Conexión del Servomotor: VCC del servomotor al pin 5V del Arduino, GND del servomotor a GND del Arduino, Pin de control del servomotor al pin digital 6 del Arduino.</p>
+								<p>3. Código Arduino IDE:</p>
+								<img src="./codigoide4.jpg" alt="Imagen de Codigo IDE4" class="image featured">
+								<p>4. Sube el código al Arduino: conecta el Arduino a tu computadora. Abre el Arduino IDE, pega el código anterior y súbelo al Arduino. Luego, observa cómo el servomotor se mueve para abrir y cerrar la puerta basada en la distancia medida por el sensor de ultrasonido.</p>
 							</section>
 						</div>
 							</section>
