--- a/index.html
+++ b/index.html
@@ -247,7 +247,21 @@
 								<p>4. Sube el código al Arduino: conecta el Arduino a tu computadora. Abre el Arduino IDE, pega el código anterior y súbelo al Arduino. Luego, observa cómo el servomotor se mueve para abrir y cerrar la puerta basada en la distancia medida por el sensor de ultrasonido.</p>
 							</section>
 						</div>
-							</section>
+							<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="./TF (6).png" alt="" /></a>
+							</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="./TF (7).png" alt="" /></a>
+							</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="./TF (8).png" alt="" /></a>
+							</article>
+							</div>
 						</div>
 					</div>
 					
