--- a/index.html
+++ b/index.html
@@ -249,17 +249,32 @@
 						</div>
 							<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="./TF (6).png" alt="" /></a>
+								<a href="#" class="image featured"><img src="./figura20.jpg" alt="" /></a>
 							</article>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="./TF (7).png" alt="" /></a>
+								<a href="#" class="image featured"><img src="./figura21.jpg" alt="" /></a>
 							</article>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="./TF (8).png" alt="" /></a>
+								<a href="#" class="image featured"><img src="./figura22.jpg" alt="" /></a>
+							</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="./figura23.jpg" alt="" /></a>
+							</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="./figura24.jpg" alt="" /></a>
+							</article>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="./figura25.jpg" alt="" /></a>
 							</article>
 							</div>
 						</div>
